--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="#010100">
+    android:background="#010100"
+    android:screenOrientation="portrait">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Stuff"
+        android:text="Time"
         android:id="@+id/time"
         android:layout_marginTop="66dp"
         android:layout_alignParentTop="true"
@@ -23,18 +24,34 @@
         android:layout_height="wrap_content"
         android:text="Do stuff"
         android:id="@+id/button"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="stuffButtonClick" />
+        android:onClick="getPlaylistButtonClick"
+        android:layout_alignTop="@+id/button2"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="in 5 seconds"
         android:id="@+id/button2"
-        android:layout_below="@+id/button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp"
-        android:onClick="onCreateAlarm" />
+        android:onClick="onCreateAlarm"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/ic_add" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Monday, December 15"
+        android:id="@+id/date"
+        android:textColor="#FFFFFF"
+        android:layout_below="@+id/time"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
