--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="#010100"
+    android:background="#001426"
     android:screenOrientation="portrait">
 
     <TextView
@@ -12,30 +12,11 @@
         android:layout_height="wrap_content"
         android:text="Time"
         android:id="@+id/time"
-        android:layout_marginTop="66dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:textSize="50sp"
         android:textColor="#FFFFFF"
-        />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Do stuff"
-        android:id="@+id/button"
-        android:onClick="getPlaylistButtonClick"
-        android:layout_alignTop="@+id/button2"
-        android:layout_alignParentEnd="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="in 5 seconds"
-        android:id="@+id/button2"
-        android:onClick="testFiveSeconds"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -54,6 +35,16 @@
         android:textColor="#FFFFFF"
         android:layout_below="@+id/time"
         android:layout_centerHorizontal="true" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/dbScrollView"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/date"
+        android:divider="#FFFFFF"
+        android:dividerHeight="1px"/>
 
 
 </RelativeLayout>
